# dim3nsion

./: .gitignore  README.md  REST.php  a.out  index.html  main.js  test.php  test_exec.c  upload.php
code_3d/: dim3n.html
code_3d/three.js-master/examples/: obj_stage.html  webgl_animation_skinning_blending.html
code_3d/three.js-master/kara code/: canvas_geometry_cube copy.html  hello.html  lets_try_this_again.html  webgl_loader_awd copy.html  webgl_loader_msgpack copy.html  webgl_tonemapping copy.html  what.html  whatAgain.html
fromImageToObject/: CMakeLists.txt  fromImageToObject.cpp
